# slask/auth_tst.py
@@ -1,0 +1,34 @@
+#!/usr/bin/env python3
+'''
+Basic example of a resource server
+'''
+
+import connexion
+
+# our hardcoded mock "Bearer" access tokens
+TOKENS = {
+    '123': 'jdoe',
+    '456': 'rms'
+}
+
+def login(username, passwd):
+    if passwd == 'pass':
+        return '123'
+    else:
+        return 'Unauthorized', 401
+
+def get_secret(user) -> str:
+    return 'You are: {uid}'.format(uid=user)
+
+
+def token_info(access_token) -> dict:
+    uid = TOKENS.get(access_token)
+    if not uid:
+        return None
+    return {'uid': uid, 'scope': ['uid']}
+
+
+if __name__ == '__main__':
+    app = connexion.FlaskApp(__name__)
+    app.add_api('auth.yaml', strict_validation=True, validate_responses=True)
+    app.run(port=8080)
